--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "imdb-bi-dashboard-test",
+  "name": "franq-frontend",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "prestart": "npm run build",
+    "build": "npx vite build",
+    "start": "node index.js"
   },
   "dependencies": {
-    "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@mdi/font": "^7.2.96",
+    "@mdi/js": "^7.2.96",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "express": "^4.18.2",
+    "material-design-icons-iconfont": "^6.7.0",
+    "serve-static": "^1.15.0",
+    "vue": "^3.3.2",
+    "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.0",
+    "vue3-charts": "^1.1.33",
+    "vuetify": "^3.3.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.17.15",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "typescript": "~5.1.6",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.11"
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
+    "prettier": "^2.8.8",
+    "vite": "^4.3.5"
   }
 }
