--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "franq-frontend",
+  "name": "imdb-bi-dashboard-test",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,24 @@
     "format": "prettier --write src/",
     "prestart": "npm run build",
     "build": "npx vite build",
-    "start": "node index.js"
+    "start": "node index.js",
+    "mock": "json-server --watch db.json"
   },
   "dependencies": {
+    "@amcharts/amcharts5": "^5.4.7",
     "@mdi/font": "^7.2.96",
     "@mdi/js": "^7.2.96",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "axios": "^1.4.0",
-    "chart.js": "^4.3.0",
     "express": "^4.18.2",
+    "json-server": "^0.17.3",
     "material-design-icons-iconfont": "^6.7.0",
+    "rxjs": "^6.6.7",
     "serve-static": "^1.15.0",
     "vue": "^3.3.2",
-    "vue-chart-3": "^3.1.8",
-    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.0",
-    "vue3-charts": "^1.1.33",
+    "vue-rx": "^6.2.0",
     "vuetify": "^3.3.0"
   },
   "devDependencies": {
